--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="ru.atomofiron.boomstream">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <meta-data
         android:name="AA_DB_NAME"
         android:value="Notelin.db"/>
@@ -15,7 +17,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".App">
         <activity
             android:name=".activities.ApikeyActivity"
             android:label="@string/app_name"
