--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,23 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="ru.atomofiron.boomstream">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <meta-data
-        android:name="AA_DB_NAME"
-        android:value="Notelin.db"/>
-    <meta-data
-        android:name="AA_DB_VERSION"
-        android:value="1"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".App">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".activities.ApikeyActivity"
             android:label="@string/app_name"
@@ -31,12 +24,11 @@
         </activity>
         <activity
             android:name=".activities.SettingsActivity"
-            android:label="@string/title_activity_settings"
-            />
+            android:label="@string/title_activity_settings"/>
         <activity
             android:name=".activities.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            />
+            android:theme="@style/AppTheme.NoActionBar"/>
+
     </application>
 
 </manifest>
